--- a/todolist/view/index.ejs
+++ b/todolist/view/index.ejs
@@ -1,17 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        
-        <title>To Do List</title>
-        
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-        <link href="/style.css" rel="stylesheet" />
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-    </head>
-    <body>
 
-    </body>
-    <script src="client.js"></script>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Todo List</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="test-style.css" rel="stylesheet" />
+</head>
+
+<body>
+    <h1>To Do List</h1>
+    <div class="container-sm">
+        <form action="/addTask" method="POST">
+            <div class ="row justify-content-center">
+                <div class = "col-sm-8 pt-3">
+                    <input type="text" class="form-control" name="textTodo" placeholder="create new task" />
+                </div>
+                <div class = "col-sm-1 pt-3">
+                    <button type="submit" class="btn btn-light">Add</button>
+                </div>
+
+            </div>
+        </form> 
+        <hr />
+        <div class="row">
+            <div class="col-sm text-left">
+                <ul id="list">
+                </ul>
+            </div>
+        </div>
+    </div>
+</body>
+<script src="client.js"></script>
 </html>
