--- a/todolist/views/index.ejs
+++ b/todolist/views/index.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-    <link href="test-style.css" rel="stylesheet" />
+    <link href="/style.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -29,6 +29,20 @@
         <div class="row">
             <div class="col-sm text-left">
                 <ul id="list">
+                    <% for(var i = 0; i < todos.length; i++){ %>
+                        <% if(todos[i].status == 0){ %>
+                        <li id="<%=todos[i].id %>" class="todo">
+                            <%= todos[i].task %>
+                        </li>
+                    <% } %>
+                    <% } %>
+                    <% for(var i = 0; i < todos.length; i++){ %>
+                        <% if(todos[i].status == 1){ %>
+                        <li id="<%=todos[i].id %>" class="checked done">
+                            <%= todos[i].task %>
+                        </li>
+                    <% } %>
+                    <% } %>
                 </ul>
             </div>
         </div>
